--- a/Model/App.Config
+++ b/Model/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   
   <connectionStrings>
-    <add name="cmsEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql.snweb.com.br;user id=snweb10;password=Mvtmjsunp339;persistsecurityinfo=True;database=snweb10&quot;" providerName="System.Data.EntityClient" />
+    <add name="cmsEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql785.umbler.com;user id=mainsoftware;password=Mvtmjsunp#87;persistsecurityinfo=True;database=cms-mainsoftware;port=41890&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
   <entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
