--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   
   <connectionStrings>
-    <add name="cmsEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql.snweb.com.br;user id=snweb10;password=Mvtmjsunp339;persistsecurityinfo=True;database=snweb10&quot;" providerName="System.Data.EntityClient" />
-    <add name="DefaultConnection" connectionString="Database=snweb10;Data Source=mysql.snweb.com.br;User Id=snweb10;Password=Mvtmjsunp339" providerName="System.Data.SqlClient" />
+    <add name="cmsEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql785.umbler.com;user id=mainsoftware;password=Mvtmjsunp#87;persistsecurityinfo=True;database=cms-mainsoftware;port=41890&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Database=cms-mainsoftware;Data Source=mysql785.umbler.com;User Id=mainsoftware;Password=Mvtmjsunp#87;Port=41890" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings>
